# Vigil

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml  codeql.yml
infrastructure/k8s/: namespace.yaml
services/alert-gateway/: Dockerfile
services/bff/: Dockerfile
services/case-service/: Dockerfile
services/detection-service/: Dockerfile
services/enrichment-service/: pyproject.toml
services/enrichment-service/tests/: test_pipeline.py
services/llm-orchestrator/: pyproject.toml
services/llm-orchestrator/tests/: test_mock_provider.py
services/masking-service/: pyproject.toml
